# rtwalk-rs

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/2023-06-11-070059_create_user/: down.sql  up.sql
migrations/2023-06-14-032452_create_forum/: down.sql  up.sql
migrations/2023-07-01-174147_create_post/: down.sql  up.sql
migrations/2023-07-10-134339_create_comment/: down.sql  up.sql
migrations/2023-07-10-134339_create_message/: up.sql
sql/: fetch_forums.sql
src/: auth.rs  constants.rs  info.rs  main.rs  media.rs  schema.rs
src/core/: event.rs  event_session.rs  mod.rs  packet.rs  session.rs
src/db/: mod.rs  pool.rs
src/db/model/: user.rs
src/db/models/: comment.rs  file.rs  forum.rs  message.rs  mod.rs  post.rs  user.rs
src/error/: mod.rs
src/gql/: context.rs  mod.rs  root.rs
src/gql/mutation/: comment.rs  forum.rs  mod.rs  post.rs  user.rs
src/gql/mutations/: comment.rs  forum.rs  mod.rs  post.rs  user.rs
src/gql/query/: comment.rs  forum.rs  mod.rs  post.rs  user.rs
src/gql/subscription/: mod.rs
src/handlers/: gql.rs  mod.rs  ws.rs
src/helpers/: mod.rs
src/search/: mod.rs
