[package]
name = "rtwalk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
env_logger = "0.10.0"
anyhow = "1.0.71"
