[package]
name = "rtwalk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
env_logger = "0.10.0"
anyhow = "1.0.71"
actix-rt = "2.8.0"
chrono = "0.4.26"
argon2 = "0.5.0"
async-graphql = { version = "5.0.10", features = ["chrono"] }
async-graphql-actix-web = "5.0.10"
log = "0.4.19"
actix-web-lab = "0.19.1"
opendal = { version = "0.37.0", features = ["layers-all", "services-fs"]}
thiserror = "1.0.40"
actix-files = "0.6.2"
uuid = { version = "1.4.0", features = ["v4", "fast-rng"] }
actix-session = { version = "0.7.2", features = ["redis-actor-session"] }
send_wrapper = "0.6.0"
slug = "0.1.4"
rand = "0.8.5"
